@@ -21,6 +21,22 @@
 </tr>
 </table>
 <p>
+2009-11-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/attribute.c (GenerateIPTCAttribute): Returned IPTC string
+        values were one character too short.
+
+</UL>
+<p>
+2009-11-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> ltdl/ltdl.c: Update libltdl to 2.2.6b in order to fix security
+        issue.  Resolves CVE-2009-3736 as it pertains to GraphicsMagick.
+
+</UL>
+<p>
 2009-11-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
